vcs/specs/parser/fail/types/rank2_unclosed_generics.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, rank2, generics, error
// @description: Test detection of unclosed generic list in rank-2 function type
// @expected-error: E041

// Generic list must be closed with >
type Transform is fn<R(R) -> R;
